--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -7,10 +7,16 @@
         <% var isAdmin = session.user && session.user.isAdmin; %>
         <% var isQuizAuthor = session.user && quizAuthorId && quizAuthorId === session.user.id; %>
 
+
+
         <% if (accepted || isAdmin || isQuizAuthor) { %>
 
             <li>
                 <%= tip.text %>
+
+                    <div>
+                    <small> (by <%= tip.author ? tip.author.username:"anonimo" %>) </small>
+                    <div>
 
                 <% if (!accepted && (isAdmin || isQuizAuthor)) { %>
 
