--- a/views/tips/index.ejs
+++ b/views/tips/index.ejs
@@ -29,19 +29,13 @@
 
                 <% if (isAdmin || isQuizAuthor) { %>
 
-                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?/edit?_method=DELETE">
+                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>/edit?_method=GET">
                     <button>Edit</button>
                 </a>
 
                 <% } %>
 
-                <% if (isAdmin || isQuizAuthor) { %>
 
-                <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE">
-                    <button>Delete</button>
-                </a>
-
-                <% } %>
                 <% if (isAdmin || isQuizAuthor) { %>
 
                     <a href="/quizzes/<%= quizId %>/tips/<%= tip.id %>?_method=DELETE">
